--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,8 +57,11 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "cSpell.words": [
+    "Boba",
     "BOBAORDER",
-    "DELIVERYORDER"
+    "DELIVERYORDER",
+    "FOODORDER",
+    "INVALIDINPUT"
   ],
   "files.associations": {
     "array": "cpp",
